# FInalProj

./: Dockerfile  __main__.py  logs.txt  pyproject.toml
