[tool.poetry]
name = "finalproj"
version = "0.1.0"
description = "Okay, this is description"
authors = ["RotterPotter <kivilele@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
